<resources>
    <string name="app_name">WearAccuracy</string>
    <string name="title_activity_main">WearAccuracy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>

    <!-- Button Fragment -->
    <string name="start_two_button_test_button_text">Start Two Button Test</string>
    <string name="start_four_button_test_button_text">Start Four Button Test</string>
    <string name="test_size_title_textview">Test Size:</string>
    <string name="default_cycles_title_textview">10</string>
    <string name="button_test_intro_message">Wear Accuracy Test\n\nThis test is designed to get a quick impression of the ability of a person to press the correct button on the connected Android Wear device.</string>
    <string name="results_placeholder_text">Results will show up here</string>
    <string name="correct_label">Correct</string>
    <string name="incorrect_label">Incorrect</string>

    <!-- Visibility Fragment -->
    <string name="visibility_test_intro_message">Wear Visibility Test\n\nThis test can be used to check the ability of the testee\nto read text at a certain size</string>
    <string name="default_text_size_button_title">Show Default Notification</string>

    <!-- Vibration Fragment -->
    <string name="vibration_test_intro_message">Wear Feedback Test\n\nThis simple test can be used to get an indication\nof the vibration duration that is necessary\nfor it to be recognized by the audience</string>
    <string name="vibrate_test_button_text">Vibrate Watch</string>
    <string name="vibrate_duration_title">Vibrate Duration:</string>
    <string name="default_visibility_content">The quick brown fox jumps over the fence</string>
    <string name="message_to_send">Message to send:</string>

    <!-- Log dialog -->
    <string name="dialog_log_data_title">Additional Info</string>
    <string name="radio_female">Female</string>
    <string name="radio_male">Male</string>
    <string name="dialog_log_data_age_title">Age:</string>
    <string name="dialog_log_data_gender_title">Gender:</string>
    <string name="save">Save</string>

    <!-- Voice Fragment -->
    <string name="voice_test_into_message">Wear Voice Test\n\nThis test spawns a notification with \na voice reply action on the watch.It can be \nused to analyze the ability of the testee \nto react to a notification using voice input</string>
    <string name="spawn_notification">Spawn Notification</string>
    <string name="response_placeholder">Response will show up here</string>

</resources>
