<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cuberob.wearaccuracy.fragments.VoiceTestFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voice_test_into_message"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response_placeholder"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/responseTextView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/spawn_notification"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"/>

</FrameLayout>
