<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cuberob.wearaccuracy.fragments.VisibilityTestFragment">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/visibility_test_intro_message"
        android:layout_gravity="center_horizontal|top"
        android:paddingTop="30dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/spinner"
            android:entries="@array/visibility_text_size_spinner_entries"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_visibility_test_button_text"
            android:id="@+id/button" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_horizontal|bottom">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/message_to_send"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/editText"
            android:text="@string/default_visibility_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />
    </LinearLayout>


</FrameLayout>
